# silly_hello_world_things

./: CMakeLists.txt  CMakePresets.json  README.md
dumb_hello_world_things/: CMakeLists.txt  dumb_hello_world_things.cpp  dumb_hello_world_things.h
